# headlesnb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md  DIALOGHELPER_SERVER.md  DIALOGMANAGER.md  MCP_SERVER.md
examples/: basic_usage.py  cell_reordering.py  dialoghelper_server_example.py  file_operations.py  multi_notebook.py  undo_redo.py
execnb/: __init__.py  nbio.py  shell.py
headlesnb/: __init__.py  base.py  dialoghelper_server.py  history.py  manager.py  mcp_server.py  tools.py
headlesnb/dialogmanager/: __init__.py  dialog_history.py  dialog_info.py  manager.py  message.py  serialization.py
headlesnb/dialogmanager/llm/: __init__.py  base.py  context.py  mock.py
tests/: __init__.py  conftest.py  test_dialoghelper_server.py  test_dialogmanager.py  test_execnb.py  test_integration_dialoghelper.py  test_manager.py  test_tools.py
